namespace DefaultNamespace
{
    public class GameConstants
    {
        public const string GameplayActionMap = "Gameplay"; 
        public const string MoveAction = "Move";
        public const string AttackAction = "Attack";
        public const string LookAction = "Look";
        
        public const string MoveParameter = "IsMoving";
        public const string BlendXParameter = "VelocityX";
        public const string BlendYParameter = "VelocityY";
        public const string AttackingParamter = "Attacking";
    }
}